@@ -24,13 +24,16 @@ YAML                = 1.13
 
 [Prereqs / ConfigureRequires]
 version                 = 0.88
+ExtUtils::CChecker      = 0.10
 Module::Build           = 0.4004
 Module::Build::WithXSpp = 0.14
 
 [Prereqs / BuildRequires]
-version           = 0.88
-Module::Build     = 0.4004
-Test::Requires    = 0.06
+version                 = 0.88
+ExtUtils::CChecker      = 0.10
+Module::Build           = 0.4004
+Module::Build::WithXSpp = 0.14
+Test::Requires          = 0.06
 
 [Meta::Dynamic::Config]
 
